Added docker-compose, started config for CoreOS

--- a/site/layouts/_default/partials/home.html
+++ b/site/layouts/_default/partials/home.html
@@ -11,3 +11,17 @@
     {{ end }}
   </div>
 </section>
+
+<script type="application/ld+json">
+  {
+    "@context": "http://schema.org",
+    "@type": "Person",
+    "url": "http://dickwettstone.com",
+    "name": "Richard P. Wettstone Ed.D.",
+    "jobTitle": "Licensed Professional Counselor",
+    "faxNumber": "+1-540-434-8100",
+    "telephone": "+1-540-434-9430",
+    "email":"lpcrpw@gmail.com",
+    "address": "356 S Main St, Harrisonburg, VA 22801"
+  }
+  </script>
