corrected location of html partials and parameterized BaseURL

--- a/site/layouts/partials/home.html
+++ b/site/layouts/partials/home.html
@@ -16,7 +16,7 @@
   {
     "@context": "http://schema.org",
     "@type": "Person",
-    "url": "http://dickwettstone.com",
+    "url": {{ .Site.BaseURL }}
     "name": "Richard P. Wettstone Ed.D.",
     "jobTitle": "Licensed Professional Counselor",
     "faxNumber": "+1-540-434-8100",
