Honing layout Removed superfluous home link from top left Placed address on front page Desaturated the link color

--- a/site/static/less/colors.less
+++ b/site/static/less/colors.less
@@ -2,4 +2,4 @@
 @fg-color: #5e2d1f;
 @darker-bg-color: hsl(0, 0%, 86%);
 @darker-fg-color: #5e1500;
-@link-color: #3366CC;
+@link-color: hsl(13, 20%, 25%);
