Fixed address link quoted special var  in rsync-deploy script to prevent globbing added inline JavaScript to show appropriate mapping app link for address with fallback to google maps

--- a/site/layouts/partials/home.html
+++ b/site/layouts/partials/home.html
@@ -9,6 +9,16 @@
       {{ end }}
     </ul>
     {{ end }}
+    <ul>
+      <li><a id=address_link href="https://www.google.com/maps/search/?api=1&query={{ .Site.Params.physical_address }}">Address: {{ .Site.Params.physical_address }}</a></li>
+    </ul>
+    <script type="text/javascript">
+      if ((navigator.platform.indexOf("iPhone") != -1) ||
+        (navigator.platform.indexOf("iPod") != -1) ||
+        (navigator.platform.indexOf("iPad") != -1)) {
+          document.getElementById("address_link").href = "maps://maps.google.com/?q={{ .Site.Params.physical_address }}";
+        }
+    </script>
   </div>
 </section>
 
